# luthor-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app_auth/: serializer.py  urls.py  views.py
asistances/: apps.py  models.py
config/: settings.py  urls.py
dorms/: apps.py  models.py
dorms/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
